--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,14 +1,14 @@
 <resources>
   <!-- login screen -->
   <string name="app_name">Mastify</string>
-  <string name="Instance_address">Instance Address</string>
-  <string name="Instance_address_tip">what is your instance server address?</string>
-  <string name="Monthly_active_users">Monthly Active Users</string>
+  <string name="instance_address">Instance Address</string>
+  <string name="instance_address_tip">what is your instance server address?</string>
+  <string name="monthly_active_users">Monthly Active Users</string>
   <string name="failed_to_retrieve_instance">Failed to retrieve instance information</string>
   <string name="instance_verification_error">Error occurred during instance verification</string>
 
   <!-- oauth screen -->
-  <string name="Connecting">Connecting…</string>
+  <string name="title_connecting">Connecting…</string>
   <string name="error_invalid_domain">Invalid domain entered</string>
 
   <!-- home screen -->
@@ -22,6 +22,7 @@
   <string name="title_settings">Settings</string>
   <string name="title_about">About</string>
   <string name="title_logout">Log out</string>
+  <string name="sensitive_content">Sensitive Content</string>
 
   <!--These are for timestamps on posts. For example: "16s" or "2d"-->
   <string name="status_created_at_now">now</string>
