--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -3,7 +3,7 @@
   <string name="app_name">Mastify</string>
   <string name="instance_address">实例地址</string>
   <string name="instance_address_tip">您所在的实例地址是什么？</string>
-  <string name="monthly_active_users">月活跃用户</string>
+  <string name="users_of_instance">实例人数</string>
   <string name="failed_to_retrieve_instance">获取实例信息失败</string>
   <string name="instance_verification_error">验证实例时出现错误</string>
 
