--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -12,6 +12,7 @@
   <string name="error_invalid_domain">无效的域名</string>
 
   <!-- home screen -->
+  <string name="home_title">主页</string>
   <string name="post_boosted_format_suffix">转嘟了</string>
   <string name="title_add_account">添加账号</string>
   <string name="title_profile">个人资料</string>
@@ -24,6 +25,19 @@
   <string name="title_logout">注销</string>
   <string name="sensitive_content">敏感内容</string>
   <string name="reply_a_post">回复了一个嘟文</string>
+  <string name="started_a_discussion_thread">展开了一个讨论串</string>
+  <string name="show_more_replies">显示更多回复</string>
+
+  <!-- status detail screen -->
+  <string name="post_your_reply">发布你的回复</string>
+
+  <plurals name="favs">
+    <item quantity="other">%d 次喜欢</item>
+  </plurals>
+
+  <plurals name="reblogs">
+    <item quantity="other">%d 次转嘟</item>
+  </plurals>
 
   <!--These are for timestamps on statuses. For example: "16s" or "2d"-->
   <string name="status_created_at_now">刚刚</string>
