--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,7 @@
 
   <!-- home screen -->
   <string name="home_title">Home</string>
-  <string name="post_boosted_format_suffix">boosted</string>
+  <string name="user_boosted">%s boosted</string>
   <string name="title_add_account">Add Account</string>
   <string name="title_profile">Profile</string>
   <string name="title_bookmarks">Bookmarks</string>
