--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,6 +29,13 @@
   <string name="text_copied">Text copied to clipboard</string>
   <string name="link_copied">Post link copied to clipboard</string>
   <string name="bookmarked_snackBar">Saved to your bookmarks</string>
+  <string name="copy_text">Copy Text</string>
+  <string name="copy_link">Copy Link</string>
+  <string name="bookmark">Bookmark</string>
+  <string name="delete_bookmark">Delete Bookmark</string>
+  <string name="mute_account">Mute %s</string>
+  <string name="block_account">Block %s</string>
+  <string name="report">Report</string>
 
   <!-- status detail screen -->
   <string name="post_your_reply">post your reply</string>
@@ -42,6 +49,12 @@
     <item quantity="one">%d Boost</item>
     <item quantity="other">%d Boosts</item>
   </plurals>
+
+  <!--  post screen-->
+  <string name="public_title">Public</string>
+  <string name="unlisted">Unlisted</string>
+  <string name="private_title">Private</string>
+  <string name="direct">Direct</string>
 
   <!--These are for timestamps on posts. For example: "16s" or "2d"-->
   <string name="status_created_at_now">now</string>
