feat: improve more details

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,6 +29,8 @@
   <string name="text_copied">Text copied to clipboard</string>
   <string name="link_copied">Post link copied to clipboard</string>
   <string name="bookmarked_snackBar">Saved to your bookmarks</string>
+  <string name="load_post_error">An error occurred while loading Post</string>
+  <string name="click_to_display_content">Click to display content</string>
   <string name="copy_text">Copy Text</string>
   <string name="copy_link">Copy Link</string>
   <string name="bookmark">Bookmark</string>
