--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -29,6 +29,8 @@
   <string name="text_copied">文本内容已复制到剪贴板</string>
   <string name="link_copied">嘟文链接已复制到剪贴板</string>
   <string name="bookmarked_snackBar">已收藏到你的书签</string>
+  <string name="load_post_error">加载嘟文时发生错误</string>
+  <string name="click_to_display_content">Click to display content</string>
   <string name="copy_text">复制文本内容</string>
   <string name="copy_link">复制嘟文链接</string>
   <string name="bookmark">添加到书签</string>
