--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,7 +20,7 @@
   <string name="title_lists">Lists</string>
   <string name="title_draft">Drafts</string>
   <string name="title_settings">Settings</string>
-  <string name="title_about">About</string>
+  <string name="title_about_mastify">About Mastify</string>
   <string name="title_logout">Log out</string>
   <string name="sensitive_content">Sensitive Content</string>
   <string name="reply_a_post">replied a post</string>
@@ -59,6 +59,12 @@
   <string name="direct">Direct</string>
   <string name="reply_placeholder">Anything you\'d like to share?</string>
   <string name="post_placeholder">Share your thoughts at the moment!</string>
+  <string name="change_post_visibility">Change Post visibility</string>
+  <string name="visibility_description">Change the visibility of your Post to make sure only the people you want can see your content.</string>
+  <string name="visibility_public">Public to everyone</string>
+  <string name="visibility_unlisted">Hide in public timeline</string>
+  <string name="visibility_private">Visible only to followers</string>
+  <string name="visibility_direct">Visible only to those mentioned</string>
 
   <!--  profile screen-->
   <string name="post_title">Posts</string>
