--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,6 +41,7 @@
 
   <!-- status detail screen -->
   <string name="post_your_reply">post your reply</string>
+  <string name="uncategorized_title">Uncategorized</string>
 
   <plurals name="favs">
     <item quantity="one">%d Favorite</item>
@@ -73,6 +74,7 @@
   <string name="follower_count">%s Followers</string>
   <string name="reply_title">Replies</string>
   <string name="media_title">Media</string>
+  <string name="edit_profile">Edit Profile</string>
 
   <!--These are for timestamps on posts. For example: "16s" or "2d"-->
   <string name="status_created_at_now">now</string>
