feat: update some details

--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -73,6 +73,8 @@
   <string name="reply_title">回复</string>
   <string name="media_title">媒体</string>
   <string name="edit_profile">编辑个人资料</string>
+  <string name="empty_status">"这个家伙还没有发布过任何嘟文"</string>
+  <string name="empty_timeline">"你还没有关注其他人哦"</string>
 
 
   <!--These are for timestamps on statuses. For example: "16s" or "2d"-->
