--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -75,6 +75,8 @@
   <string name="reply_title">Replies</string>
   <string name="media_title">Media</string>
   <string name="edit_profile">Edit Profile</string>
+  <string name="empty_status">This guy hasn\'t yet made a post</string>
+  <string name="empty_timeline">"You haven't followed anyone else yet"</string>
 
   <!--These are for timestamps on posts. For example: "16s" or "2d"-->
   <string name="status_created_at_now">now</string>
