--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,7 +41,7 @@
   <string name="title_logout">Log out</string>
   <string name="sensitive_content">Sensitive Content</string>
   <string name="reply_a_post">replied a post</string>
-  <string name="started_a_discussion_thread">started a discussion thread</string>
+  <string name="started_a_discussion_thread">Started a discussion thread</string>
   <string name="show_more_replies">Show more replies</string>
   <string name="text_copied">Text copied to clipboard</string>
   <string name="link_copied">Post link copied to clipboard</string>
