--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -1,5 +1,5 @@
 <!--
-  ~ Copyright 2023 WhiteScent
+  ~ Copyright 2024 WhiteScent
   ~
   ~ This file is a part of Mastify.
   ~
@@ -114,6 +114,18 @@
   <string name="abbreviated_hours_ago">%d 小时前</string>
   <string name="abbreviated_minutes_ago">%d 分钟前</string>
   <string name="abbreviated_seconds_ago">%d 秒前</string>
+
+  <string name="vote_poll_day">%d 天后投票结束</string>
+  <string name="vote_poll_hours">%d 小时后投票结束</string>
+  <string name="vote_poll_minutes">%d 分钟后投票结束</string>
+  <string name="vote_poll_soon_ending">投票即将结束</string>
+  <string name="vote_poll_expired">投票已结束</string>
+  <string name="vote_poll_participants_count">%d 位用户参与了投票</string>
+  <string name="vote_title">投票</string>
+  <string name="vote_failed_title">投票失败：%s</string>
+  <plurals name="votes">
+    <item quantity="other">%d 票</item>
+  </plurals>
 
   <!-- Explore screen -->
   <string name="explore_instance">探索 %s</string>
